16215
Consider this code:
```scala
trait Queue[T] 
object Queue {
    def apply[T](xs: T*): Queue[T] = new QueueImpl[T](xs.toList, Nil)

    private class QueueImpl[T] private (
        private val leading: List[T],
        private val trailing: List[T]
    ) extends Queue[T]
}
```

It fails (which is correct (and it works with a non-private constrcutor)), but the error message is wrong in Scala >= 2.9:
```scala
<console>:10: error: type mismatch;
 found   : scala.runtime.StringAdd
 required: Queue[T]
           def apply[T](xs: T*): Queue[T] = new QueueImpl[T](xs.toList, Nil)
                                            ^
```

It is correctly reported in 2.8 though:
```scala
error: constructor QueueImpl cannot be accessed in object Queue
           def apply[T](xs: T*): Queue[T] = new QueueImpl[T](xs.toList, Nil)
                                            ^
```
